[gd_scene format=3 uid="uid://5lw6uvsgwm3i"]

[ext_resource type="Script" uid="uid://eo7qyg1tvyyk" path="res://Scripts/Stats f√ºr Spieler und Gegner/rat_gunner.gd" id="1_kwbg6"]
[ext_resource type="AudioStream" uid="uid://bxqh6enh2cpit" path="res://assets/SFX/Squeak_1.mp3" id="2_2kj8t"]
[ext_resource type="AudioStream" uid="uid://0xuuq1lqfxl8" path="res://assets/SFX/HurtSound/Squeak_2.mp3" id="3_2pwpe"]
[ext_resource type="Texture2D" uid="uid://kdxi8xn7rx10" path="res://Bilder/Tilemaps/Fatrat-1.png.png" id="4_rl835"]
[ext_resource type="PackedScene" uid="uid://b32h5x6mjro2a" path="res://Scenes/ShallowScenes/Hurtbox.tscn" id="5_2pwpe"]
[ext_resource type="Script" uid="uid://cfcppl3o6msyl" path="res://Scripts/Enemies/finite_state_machine.gd" id="5_kwbg6"]
[ext_resource type="Script" uid="uid://bsqiew18ldy1y" path="res://Scripts/Enemies/shooting.gd" id="7_c5hea"]
[ext_resource type="Script" uid="uid://76oq2rcx1jx1" path="res://Scripts/Enemies/follow.gd" id="8_p4d6a"]
[ext_resource type="PackedScene" uid="uid://c477hchgxem1u" path="res://Scenes/ShallowScenes/Rat_Bullet.tscn" id="8_rl835"]

[sub_resource type="LabelSettings" id="LabelSettings_eo3u7"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_kwbg6"]
streams_count = 2
stream_0/stream = ExtResource("2_2kj8t")
stream_1/stream = ExtResource("3_2pwpe")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2pwpe"]
size = Vector2(5, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8x47"]
atlas = ExtResource("4_rl835")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hr1dc"]
atlas = ExtResource("4_rl835")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rl835"]
atlas = ExtResource("4_rl835")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikb6k"]
atlas = ExtResource("4_rl835")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_le354"]
atlas = ExtResource("4_rl835")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmsq4"]
atlas = ExtResource("4_rl835")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rl835"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8x47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hr1dc")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl835")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikb6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_le354")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmsq4")
}],
"loop": true,
"name": &"Right",
"speed": 5.0
}]

[node name="Rat_gunner" type="CharacterBody2D" unique_id=85414628 groups=["enemy"]]
top_level = true
collision_layer = 3
collision_mask = 3
script = ExtResource("1_kwbg6")

[node name="RayCast2D" type="RayCast2D" parent="." unique_id=1497094302]
exclude_parent = false
collision_mask = 2
collide_with_areas = true

[node name="debug" type="Label" parent="." unique_id=452939165]
visible = false
offset_left = -20.0
offset_top = -33.0
offset_right = 21.0
offset_bottom = -10.0
text = "test"
label_settings = SubResource("LabelSettings_eo3u7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="rat_hit" type="AudioStreamPlayer" parent="." unique_id=1435915558]
stream = SubResource("AudioStreamRandomizer_kwbg6")
volume_db = -10.0
bus = &"SFX"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1311463599]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_2pwpe")

[node name="AnimationTree" type="AnimatedSprite2D" parent="." unique_id=391422208]
sprite_frames = SubResource("SpriteFrames_rl835")
animation = &"Idle"
autoplay = "Idle"

[node name="Finite_State_Machine" type="Node2D" parent="." unique_id=1137196935]
script = ExtResource("5_kwbg6")

[node name="Follow" type="Node2D" parent="Finite_State_Machine" unique_id=1627553619]
script = ExtResource("8_p4d6a")

[node name="Shooting" type="Node2D" parent="Finite_State_Machine" unique_id=1019491932]
script = ExtResource("7_c5hea")
bullet_node = ExtResource("8_rl835")

[node name="Shoot_Timer" type="Timer" parent="Finite_State_Machine/Shooting" unique_id=1742608855]
wait_time = 1.5

[node name="Reload_Timer" type="Timer" parent="Finite_State_Machine/Shooting" unique_id=1081697699]

[node name="Hurtbox" parent="." unique_id=1259035800 instance=ExtResource("5_2pwpe")]
collision_layer = 4
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -1)

[connection signal="timeout" from="Finite_State_Machine/Shooting/Shoot_Timer" to="Finite_State_Machine/Shooting" method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="Finite_State_Machine/Shooting/Reload_Timer" to="Finite_State_Machine/Shooting" method="_on_reload_timer_timeout"]
[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]

[editable path="Hurtbox"]
